--- a/src/locale/de.yml
+++ b/src/locale/de.yml
@@ -4,6 +4,21 @@ conversation:
     konfigurieren, für welche Impfstoffe und Arztpraxen du Benachrichtigungen erhalten möchtest.
     Bevor du diese Konfiguration durchgeführt hast, werde ich dir keine Benachrichtigungen
     schicken.
+  info_html: |
+    <b>{bot_name}</b> v{version} - Entwickelt von @NiklasRosenstein
+
+    <b>Über diesen Telegram Bot:</b>
+    Der Bot sendet dir eine Nachricht, wenn bei https://termin.dachau-med.de/ Impftermine frei werden.
+
+    Fragen, Probleme oder Anregungen? Gerne an @NiklasRosenstein. Du kannst den Quellcode dieses \
+    Telegram Bots auf GitHub finden: https://github.com/NiklasRosenstein/telegram-dachau_impf_bot
+
+    <b>Kommandos:</b>
+    /einstellungen - Konfiguriere die Arztpraxen und Impfstoffe für die du Benachrichtigungen erhalten möchtest.
+    /termine - Zeige alle bekannten freien Termine an, die deinen Einstellungen entsprechen.
+    /info - Zeige informationen über den Bot an.
+  summary_header: 'Zuletzt bekannte freie Termine:'
+  no_availability: Es sind aktuell keine freien Termine bekannt, die zu deinen Einstellungen passen.
 
 emoji:
   enabled: ✅
